# psana-legion

./: .gitignore  Makefile  README.md  docker_setup.bash  psana_legion.cc  psana_legion.py
bandwidth_test/: .gitignore  Makefile  native_kernels.cc  native_kernels.h  native_kernels_helper.cc  native_kernels_helper.h  test_legion.cc  test_mpi.cc  test_mpi_openmp.cc
bandwidth_test/scripts/: sbatch_legion.sh  sbatch_legion_ht_sharing.sh  sbatch_mpi.sh  sbatch_mpi_openmp.sh
cctbx/: README.md
cctbx/local_setup/: .gitignore  build_from_scratch.sh
cctbx/local_setup_mpi/: .gitignore  build_from_scratch.sh
cori/: make_sbatch.bash  sbatch_cori.sh  sbatch_cori.template
docker/: .gitignore  Dockerfile  Dockerfile.cctbx-legion  Dockerfile.cctbx-legion-rebuild  Dockerfile.cctbx-legion-rebuild-master  Dockerfile.cctbx-legion-rebuild-plain  Dockerfile.cctbx-legion-rebuild-sapling  Dockerfile.cctbx-mpi  Dockerfile.cctbx-mpi-tasking  Dockerfile.minimal  Dockerfile.psana-hybrid  Dockerfile.psana-legion  Dockerfile.psana-legion-blocking  Dockerfile.psana-mpi
docker/gcc_wrapper/: g++
io_test/: .gitignore  Makefile  io_test.cc  sbatch_test.sh  sbatch_test_bb.sh  sbatch_test_bb_haswell.sh  sbatch_test_haswell.sh  sbatch_test_ncores.sh
lcls2/proxy_app/: CMakeLists.txt  bsub_cpu.sh  bsub_gpu.sh  copy_small_data.sh  data_collector.py  dirty_build.sh  native_tasks.py  run_cpu.sh  sbatch_cpu.sh  solver.py  user.py
lcls2/proxy_app/phaseret/: __init__.py
lcls2/proxy_app/phaseret/generator3D/: Projection.py  README.md
lcls2/test_scripts/: CMakeLists.txt  bsub_cpu.sh  bsub_gpu.sh  bsub_multi_cpu.sh  bsub_simple.sh  copy_small_data.sh  lifeline_mapper.cc  lifeline_mapper.h  native_kernels.cc  native_kernels_tasks.cc  native_kernels_tasks.h  pick_hcas.py  run.sh  run_cpu.sh  run_cpu_gpu.sh  run_gpu.sh  simple_user.py  user.py
local_setup/: .gitignore  build_from_scratch.sh  dump_node_backtraces.sh  run.sh  run_gpu.sh  run_local.bash  run_subprocess.sh
mapper_test/: Makefile  build_mapper.rg  mapper.cc  mapper.h  mapper_gnuplot.py  mapper_timeline.py  split_debug.bash  steals_gnuplot.py  test.rg  worker_gnuplot.py
psana_legion/: .gitignore  Makefile  check_map_report.py  io_tasks.cc  io_tasks.h  kernels.py  legion_HDF5.py  lifeline_mapper.cc  lifeline_mapper.h  mpi_idx.py  mpi_rax.py  mpi_smd.py  native_kernels.c  native_kernels.cc  native_kernels.h  native_kernels_helper.c  native_kernels_helper.cc  native_kernels_helper.h  native_kernels_pyext.c  native_kernels_tasks.cc  native_kernels_tasks.h  native_kernels_tasks_gpu.cu  pdsdata_includes.h  psana_legion.cc  psana_legion.py  psana_mapper.cc  psana_mapper.h  psana_mpi.py  random_mapper.cc  random_mapper.h  setup.py  simple_mapper.cc  simple_mapper.h  split.bash  task_pool_mapper.cc  task_pool_mapper.h  user.py
py_error_repro/: .gitignore  build_from_scratch.sh  import_exception.py
sapling/: .gitignore  build_from_scratch.sh  run_sapling.bash
sketches/: print_events.py  v1_basic.py  v2_pretty.py
summitdev/: .gitignore  build_from_scratch.sh
(+123 files in other folders)
